migrate all assets to vite

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,5 @@
-// Import Bootstrap
-@import '~bootstrap/dist/css/bootstrap';
+// Import Bootstrap form node modules
+@import 'bootstrap/scss/bootstrap';
 
 //varibales
 @import 'variable';
