--- a/resources/sass/variable.scss
+++ b/resources/sass/variable.scss
@@ -17,6 +17,7 @@ $gold-400:#F3B57B;
 $gold-300:#D6AF8B;
 $gold-200:#E4B589;
 $gold-transparent:rgba(236, 153, 75, 0.82);
+$gold-transparent-2:rgba(255, 219, 185, 0.82);
 
 $white:#fff;
 $link-color:#bdbdbd;
