--- a/resources/scss/variable.scss
+++ b/resources/scss/variable.scss
@@ -12,6 +12,8 @@ $silver-400:#9EA0A1;
 $silver-300:#CFD2D6;
 $silver-100:#F4F5F6;
 
+$border-color:#dee2e6;
+
 $gold-500:#EC994B;
 $gold-400:#F3B57B;
 $gold-300:#D6AF8B;
