--- a/resources/scss/dashboard.scss
+++ b/resources/scss/dashboard.scss
@@ -58,7 +58,7 @@
             }
         }
         .mobile-menu {
-            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+            @extend .button-shadow;
             font-size: 20px;
             color: #636363;
             border-radius: 4px;
@@ -117,14 +117,14 @@
     align-items: center;
     width: 100%;
     gap: 5px;
-    height: 154px;
+    height: 140px;
 
     i {
         font-size: 25px;
     }
 
     // addstyle of custom-shadow
-    @extend .custom-shadow;
+    @extend .button-shadow;
     img {
         height: 45px;
     }
@@ -138,7 +138,7 @@
 }
 
 .transaction-table {
-    @extend .custom-shadow;
+    @extend .button-shadow;
     border-radius: 8px;
     padding: 20px;
     min-height: 200px;
@@ -251,6 +251,7 @@
     .tile-btn {
         flex-direction: column;
         font-size: 11px;
+        height: 120px;
     }
  }
 
