--- a/resources/scss/modal.scss
+++ b/resources/scss/modal.scss
@@ -2,12 +2,13 @@
     display: none;
     position: absolute;
     width: 100%;
-    top: 100vh;
+    top: 90vh;
     height: 0px;
     background-color: #fff;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease-out, top 0.3s ease-out;
+    z-index: 0;
 
     .modal-head {
         padding: 10px 20px;
@@ -38,9 +39,114 @@
         top: 0;
         visibility: visible;
         height: 100%;
+        z-index: 9999;
         display: block;
+
+        @media (min-width: 768px) {
+            width: 50%;
+            top: 50px;
+            left: 50%;
+            transform: translate(-50%);
+            height: auto;
+            max-width: 600px;
+            box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+            border: 1px solid $border-grey;
+            border-radius: 8px;
+        }
     }
     .main-content {
         position: relative;
+
+        span.plans-heading {
+            display: inline-flex !important;
+            align-items: center;
+            gap: 5px;
+            #selectedPlan {
+                padding: 5px 10px;
+                border-radius: 10px;
+                background-color: $primary;
+                color: #fff;
+                font-size: $font-extra-small;
+                line-height: 1;
+                margin: 0;
+            }
+        }
+
+        .plans {
+            //create grid that will contain the plan dynamicaly
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
+            gap: 5px;
+            max-height: 200px;
+            overflow-y: auto;
+            padding: 10px;
+            border-radius: 8px;
+            border: 1px solid $border-color;
+
+            &.package-plans {
+                grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+            }
+
+            .plan{
+                input {
+                    visibility: hidden;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                }
+
+                .amount-btn {
+                    width: 100%;
+                    background-color: #fff;
+                    border-radius: 4px;
+                    padding: 5px 10px;
+                    @extend .button-shadow;
+                    cursor: pointer;
+                    text-align: center;
+                    transition: all 0.3s ease-out;
+
+                    &.package {
+                        padding: 8px 10px;
+                        span {
+                            padding:0;
+                            line-height: 1.2;
+                            display: block;
+                            &.package-name {
+                                font-size: $font-small;
+                                font-weight: 600;
+                                color: black;
+                                text-align: left;
+                            }
+                            &.description {
+                                font-size: $font-extra-small;
+                                color: $silver-500;
+                                text-align: left;
+                            }
+                        }
+
+                    }
+
+                    &:hover {
+                        background-color: $gold-transparent-2;
+                    }
+                }
+
+                input:checked + label {
+                    background-color: $primary;
+                    color: $white;
+                    @extend .button-shadow;
+
+                    span {
+                        color: $white !important;
+                    }
+
+                    &:hover {
+                        opacity: 0.8;
+                        background-color: $primary;
+                    }
+                }
+            }
+        }
+
     }
 }
