--- a/resources/scss/dashboard.scss
+++ b/resources/scss/dashboard.scss
@@ -26,7 +26,7 @@
 
         .notification {
             margin-left: 20px;
-            color: #ABA8E3;
+            color: $red-500;
             i {
                 font-size: 20px;
             }
