--- a/resources/scss/variable.scss
+++ b/resources/scss/variable.scss
@@ -21,6 +21,8 @@ $gold-200:#E4B589;
 $gold-transparent:rgba(236, 153, 75, 0.82);
 $gold-transparent-2:rgba(255, 219, 185, 0.82);
 
+$red-500:#E74C3C;
+
 $white:#fff;
 $link-color:#bdbdbd;
 $link-hover:#282568;
@@ -30,7 +32,7 @@ $border-grey:#e0d8f034;
 
 //font size
 $font-extra-small:10px;
-$font-small:14px;
+$font-small:13px;
 $font-medium:19px;
 $font-large:24px;
 $font-extra-large:29px;
