--- a/resources/scss/dashboard.scss
+++ b/resources/scss/dashboard.scss
@@ -1,77 +1,12 @@
-.dashboard-container{
-    background: #F6F7F9;
+.dashboard-container {
+    background: #f6f7f9;
     font-family: "Inter", sans-serif;
-    .dashboard-nav {
-        background: #fff;
-        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
-        padding: 10px 0;
-        border-radius: 5px;
-        position: sticky;
-        top: 0;
-        left: 0;
-
-        .balance-container {
-            color: #F2AE1C;
-            i {
-                font-size: 30px;
-                &.money-icon {
-                    font-size: 20px;
-                }
-            }
-            span {
-                font-size: 20px;
-                font-weight: 700;
-            }
-        }
-
-        .notification {
-            margin-left: 20px;
-            color: $red-500;
-            i {
-                font-size: 20px;
-            }
-        }
-
-        #dashboardDropdown {
-            button {
-                .avatar {
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 50%;
-                    margin-right: 10px;
-                    background-color: #ABA8E3;
-                    color: #fff;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    span {
-                        font-size: 20px;
-                        text-transform: uppercase;
-
-
-                    }
-                }
-                .user-name {
-                    font-size: 15px;
-                    color: #545454;
-                }
-            }
-        }
-        .mobile-menu {
-            @extend .button-shadow;
-            font-size: 20px;
-            color: #636363;
-            border-radius: 4px;
-            background-color:#ffffff ;
-            padding: 3px 10px;
-        }
-    }
     .balance-section {
         @extend .custom-shadow;
         width: 100%;
         padding: 20px 0;
         min-height: 182px;
-        background-color:#FEF5E5;
+        background-color: #fef5e5;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -86,7 +21,7 @@
             }
             .balance-text {
                 span {
-                    color: #F2AE1C;
+                    color: #f2ae1c;
                     display: block;
                     line-height: 1;
 
@@ -100,14 +35,13 @@
                 }
             }
         }
-
     }
 }
 
 .tile-btn {
     background-color: #fff;
     border-radius: 8px;
-    color: #F2AE1C;
+    color: #f2ae1c;
     font-size: 24px;
     font-weight: 600;
     text-align: center;
@@ -132,21 +66,34 @@
     &:hover {
         transition: all 0.3s ease;
         transform: scale(1.03);
-
     }
-
 }
 
 .transaction-table {
     @extend .button-shadow;
     border-radius: 8px;
-    padding: 20px;
-    min-height: 200px;
     background-color: #fff;
+    position: relative;
+
+    .table-body-container {
+        min-height: 200px;
+        max-height: 400px;
+        overflow: hidden;
+        overflow-y: auto;
+        padding: 63px 20px 20px 20px;
+        border-radius: 8px;
+    }
 
     .header-table {
-        padding-bottom: 10px;
-        border-bottom: 1px solid #E5E5E5;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 10;
+        width: 100%;
+        padding: 20px;
+        border-radius: 8px 8px 0 0;
+        background-color: #fff;
+        border-bottom: 1px solid #e5e5e5;
         .header-title {
             display: flex;
             justify-content: space-between;
@@ -160,11 +107,10 @@
                 color: #949393;
                 font-weight: 400;
             }
-
         }
     }
     .table-row-container {
-        border-bottom: 1px solid #E5E5E5;
+        border-bottom: 1px solid #e5e5e5;
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -178,19 +124,19 @@
 
             .type {
                 @extend .custom-shadow;
-                width: 40px;
-                height: 40px;
+                width: 30px;
+                height: 30px;
                 border-radius: 50%;
-                background-color: #F2AE1C;
+                background-color: #f2ae1c;
                 position: relative;
-               i {
-                font-size: 16px;
-                color: #fff;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-               }
+                i {
+                    font-size: 16px;
+                    color: #fff;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
             }
             .text {
                 font-size: 14px;
@@ -204,7 +150,7 @@
         }
         .amount-row {
             span {
-                font-size: 16px;
+                font-size: $font-medium;
                 font-weight: 700;
                 color: #bebdbd !important;
             }
@@ -227,9 +173,8 @@
         .title {
             font-size: 11px;
         }
-
     }
- }
+}
 
 // `md` applies to small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) {
@@ -253,18 +198,15 @@
         font-size: 11px;
         height: 120px;
     }
- }
+}
 
 // `xl` applies to large devices (desktops, less than 1200px)
 @media (max-width: 1199.98px) {
     .tile-btn {
         font-size: 16px;
     }
- }
+}
 
 // `xxl` applies to x-large devices (large desktops, less than 1400px)
-@media (max-width: 1399.98px) { }
-
-
-
-
+@media (max-width: 1399.98px) {
+}
