--- a/resources/scss/modal.scss
+++ b/resources/scss/modal.scss
@@ -120,6 +120,7 @@
 
                 .amount-btn {
                     width: 100%;
+                    height: 100%;
                     background-color: #fff;
                     border-radius: 4px;
                     padding: 5px 10px;
@@ -127,17 +128,25 @@
                     cursor: pointer;
                     text-align: center;
                     transition: all 0.3s ease-out;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+
+                    span {
+                        font-weight: 600;
+                        color: black;
+                    }
 
                     &.package {
                         padding: 8px 10px;
+                        align-items: flex-start;
                         span {
                             padding:0;
                             line-height: 1.2;
                             display: block;
                             &.package-name {
                                 font-size: $font-small;
-                                font-weight: 600;
-                                color: black;
                                 text-align: left;
                             }
                             &.description {
@@ -173,3 +182,5 @@
 
     }
 }
+
+
