--- a/resources/scss/variable.scss
+++ b/resources/scss/variable.scss
@@ -10,6 +10,7 @@ $blue-transparent:rgba(21, 19, 60, 0.25);
 $silver-500:#73777B;
 $silver-400:#9EA0A1;
 $silver-300:#CFD2D6;
+$silver-200:#e5e5e5;
 $silver-100:#F4F5F6;
 
 $border-color:#dee2e6;
