--- a/resources/scss/custom-styles.scss
+++ b/resources/scss/custom-styles.scss
@@ -1003,8 +1003,16 @@ input,select,option {
     color: #525252 !important;
 }
 
+.error-size {
+    font-size: 12px;
+    color: red;
+}
+
 .error-message {
     margin-top: 5px;
+    span {
+       @extend .error-size;
+    }
 }
 
 
