--- a/resources/scss/login.scss
+++ b/resources/scss/login.scss
@@ -1,15 +1,49 @@
-.login-contaniner {
+.form-contaniner {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     flex-direction: column;
     background: #f6f7f9;
+
     .form {
-        @extend .button-shadow;
+        position: relative;
+
         padding: 50px 30px 40px 30px;
         min-width: 350px;
         max-width: 500px;
         border-radius: 8px;
+
+        .header-content {
+            h2,p {
+                text-align: center !important;
+            }
+        }
+        .logo {
+            margin: 0 auto;
+            margin-bottom: 10px
+        }
+
+        @extend .button-shadow;
+
+        @media (min-width: 576px) {
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 10px;
+                background: $gold-500;
+                z-index: 1;
+                border-radius: 8px 8px 0 0;
+            }
+        }
+
+        // on small screen
+        @media (max-width: 576px) {
+            box-shadow: none !important;
+        }
+
     }
 }
