fix some things

--- a/resources/scss/dashboard.scss
+++ b/resources/scss/dashboard.scss
@@ -36,6 +36,12 @@
             }
         }
     }
+  #historyTable {
+    min-height: 300px;
+    .loader-container {
+        min-height: 200px;
+    }
+  }
 }
 
 .tile-btn {
